--- a/packages/components/badge/style/themes/default.variable.less
+++ b/packages/components/badge/style/themes/default.variable.less
@@ -1,5 +1,6 @@
 @badge-dot-size: 6px;
 @badge-count-size: 16px;
+@badge-count-padding: 0 5px;
 @badge-font-size: var(--ix-font-size-sm);
 
 @badge-color: var(--ix-text-color-inverse);
